--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "nodemon --inspect src/index.js",
-    "watch": "node-sass --watch src/resourses/scss/ --output src/public/css",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/donadzai/blog.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/donadzai/blog/issues"
-  },
-  "homepage": "https://github.com/donadzai/blog#readme",
-  "dependencies": {
-    "@handlebars/allow-prototype-access": "^1.0.5",
-    "express": "^4.18.2",
-    "express-handlebars": "^7.1.2",
-    "mongoose": "^8.0.0"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "node-sass": "^9.0.0",
-    "nodemon": "^3.0.1"
-  }
+    "name": "blog",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "nodemon --inspect src/index.js",
+        "watch": "node-sass --watch src/resourses/scss/ --output src/public/css",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/donadzai/blog.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/donadzai/blog/issues"
+    },
+    "homepage": "https://github.com/donadzai/blog#readme",
+    "dependencies": {
+        "@handlebars/allow-prototype-access": "^1.0.5",
+        "express": "^4.18.2",
+        "express-handlebars": "^7.1.2",
+        "mongoose": "^8.0.0",
+        "mongoose-slug-updater": "^3.3.0"
+    },
+    "devDependencies": {
+        "morgan": "^1.10.0",
+        "node-sass": "^9.0.0",
+        "nodemon": "^3.0.1"
+    }
 }
